--- a/Configs/.config/hypr/hyprland.conf
+++ b/Configs/.config/hypr/hyprland.conf
@@ -16,7 +16,7 @@ $scrPath = $HOME/.local/share/bin # set scripts path
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 
-monitor = ,preferred,auto,auto
+# monitor = ,preferred,auto,auto
 
 
 # █░░ ▄▀█ █░█ █▄░█ █▀▀ █░█
@@ -38,6 +38,10 @@ exec-once = wl-paste --type text --watch cliphist store # clipboard store text d
 exec-once = wl-paste --type image --watch cliphist store # clipboard store image data
 exec-once = $scrPath/swwwallpaper.sh # start wallpaper daemon
 exec-once = $scrPath/batterynotify.sh # battery notification
+exec-once = systemctl --user start gammastep-indicator.service # start gammastep-indicator (nightlight)
+exec-once = $HOME/handle_hdmi.sh # handle monitor behaviour
+exec-once = /usr/lib/pam_kwallet_init # start kwallet-pam to not lose session on brave
+# exec-once = $HOME/Coding/python/subito/subito_monitor # start subito.it monitor
 
 
 # █▀▀ █▄░█ █░█
@@ -45,7 +49,7 @@ exec-once = $scrPath/batterynotify.sh # battery notification
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-env = PATH,$PATH:$scrPath
+env = PATH,$PATH:$scrPath:$HOME/.config/emacs/bin:$HOME/Coding/charles/bin
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
@@ -64,10 +68,11 @@ env = GDK_SCALE,1
 
 input {
     kb_layout = us
+    kb_variant = intl
     follow_mouse = 1
 
     touchpad {
-        natural_scroll = no
+        natural_scroll = yes
     }
 
     sensitivity = 0
@@ -136,3 +141,5 @@ source = ~/.config/hypr/monitors.conf # initially empty, to be configured by use
 source = ~/.config/hypr/userprefs.conf # initially empty, to be configured by user and remains static
 
 # Note: as userprefs.conf is sourced at the end, settings configured in this file will override the defaults
+source = ~/.config/hypr/nvidia.conf # auto sourced vars for nvidia
+
