--- a/Configs/.config/hypr/keybindings.conf
+++ b/Configs/.config/hypr/keybindings.conf
@@ -10,9 +10,11 @@ $mainMod = Super # super / meta / windows key
 
 # Assign apps
 $term = kitty
-$editor = code
+$editor = codium
 $file = dolphin
-$browser = firefox
+$browser = brave
+$music = spotify
+$discord = webcord
 
 # Window/Session actions
 bind = $mainMod, Q, exec, $scrPath/dontkillsteam.sh # close focused window
@@ -30,7 +32,10 @@ bind = Ctrl+Alt, W, exec, killall waybar || waybar # toggle waybar
 bind = $mainMod, T, exec, $term # launch terminal emulator
 bind = $mainMod, E, exec, $file # launch file manager
 bind = $mainMod, C, exec, $editor # launch text editor
-bind = $mainMod, F, exec, $browser # launch web browser
+# bind = $mainMod, F, exec, $browser # launch web browser
+bind = $mainMod, B, exec, $browser # launch web browser
+bind = $mainMod, M, exec, $music # launch music application
+bind = $mainMod, D, exec, $discord # launch discord
 bind = Ctrl+Shift, Escape, exec, $scrPath/sysmonlaunch.sh # launch system monitor (htop/btop or fallback to top)
 
 # Rofi menus
