--- a/Configs/.config/hypr/nvidia.conf
+++ b/Configs/.config/hypr/nvidia.conf
@@ -6,6 +6,14 @@
 
 env = LIBVA_DRIVER_NAME,nvidia
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-env = __GL_VRR_ALLOWED,1
-env = WLR_NO_HARDWARE_CURSORS,1
+env = __GL_VRR_ALLOWED,0
+# env = WLR_NO_HARDWARE_CURSORS,1  #deprecated
 env = WLR_DRM_NO_ATOMIC,1
+env = NVD_BACKEND, direct
+env = ELECTRON_OZONE_PLATFORM_HINT,auto
+env = GBM_BACKEND,nvidia-drm
+# env = WLR_DRM_DEVICES,$HOME/.config/hypr/intel_card:$HOME/.config/hypr/nvidia_card
+
+cursor {
+    no_hardware_cursors = true
+    }
