--- a/Configs/.config/hypr/userprefs.conf
+++ b/Configs/.config/hypr/userprefs.conf
@@ -4,3 +4,7 @@
 
 # Set your personal hyprland configuration here
 # For a sample file, please refer to https://github.com/prasanthrangan/hyprdots/blob/main/Configs/.config/hypr/userprefs.t2
+
+
+bindl=,switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-1, disable"
+bindl=,switch:off:Lid Switch,exec,hyprctl keyword monitor "eDP-1, 1920x1080, 0x1080, 1.5"
