--- a/Configs/.config/hypr/hyprland.conf
+++ b/Configs/.config/hypr/hyprland.conf
@@ -39,7 +39,7 @@ exec-once = wl-paste --type image --watch cliphist store # clipboard store image
 exec-once = $scrPath/swwwallpaper.sh # start wallpaper daemon
 exec-once = $scrPath/batterynotify.sh # battery notification
 exec-once = systemctl --user start gammastep-indicator.service # start gammastep-indicator (nightlight)
-exec-once = $HOME/handle_hdmi.sh # handle monitor behaviour
+exec-once = $scrPath/handle_hdmi.sh # handle monitor behaviour
 exec-once = /usr/lib/pam_kwallet_init # start kwallet-pam to not lose session on brave
 # exec-once = $HOME/Coding/python/subito/subito_monitor # start subito.it monitor
 
