--- a/Configs/.config/hypr/userprefs.conf
+++ b/Configs/.config/hypr/userprefs.conf
@@ -7,4 +7,4 @@
 
 
 bindl=,switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-1, disable"
-bindl=,switch:off:Lid Switch,exec,hyprctl keyword monitor "eDP-1, 1920x1080, 0x1080, 1.5"
+bindl=,switch:off:Lid Switch,exec,hyprctl keyword monitor "eDP-1, 1920x1080@60, 0x1080, 1.5"
